--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
       "prettier"
   ],
   "rules": {
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
     "react-hooks/rules-of-hooks": "error",
     "prettier/prettier": "error",
     "react-hooks/exhaustive-deps": "warn",
