--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.1.2",
     "react-test-renderer": "16.13.1",
+    "styled-components": "^5.2.1",
     "typescript": "^3.8.3"
   },
   "jest": {
